# SlugLog

./: .gitignore  Cargo.toml  README.md  SLOG_CLI_INSTRUCTIONS.md  index.html  install.command  mockup-tray.html  mockup.html  package-lock.json  package.json  slog-init  slug-init  sprite-evolution.html  sprite-workshop.html  vite.config.ts
crates/slog-cli/: Cargo.toml
crates/slog-cli/src/: main.rs
crates/slog-core/: Cargo.toml
crates/slog-core/src/: db.rs  types.rs
crates/sluglog-cli/: Cargo.toml
crates/sluglog-cli/src/: main.rs
crates/sluglog-core/: Cargo.toml
crates/sluglog-core/src/: db.rs  lib.rs  types.rs
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  git_commits.rs  lib.rs  main.rs
src/components/: About.css  About.tsx  AllEntries.css  AllEntries.tsx  Board.css  Board.tsx  CliPage.css  CliPage.tsx  DayCommits.css  DayCommits.tsx  DayDetail.css  DayDetail.tsx  EditableEntryCard.tsx  Habitat.css  Habitat.tsx  Header.css  Header.tsx  Projects.css  Projects.tsx  QuickAdd.css  QuickAdd.tsx  Sidebar.css  Sidebar.tsx  SlugMood.css  SlugMood.tsx  SlugReminder.css  SlugReminder.tsx  Timeline.css  Timeline.tsx  TrayPopup.css  TrayPopup.tsx
src/components/habitat/: Graveyard.css  Graveyard.tsx  HatchCeremony.css  HatchCeremony.tsx  PixelHabitat.css  PixelHabitat.tsx  creatureRegistry.ts  sprites.ts  useGameLoop.ts
src/lib/: commands.ts  dates.ts  types.ts
src/styles/: app.css  globals.css  theme.css
