# SLOG - Dev Journal & Timetracker
# Cargo Workspace: shared core crate, Tauri app, CLI binary

[workspace]
resolver = "2"
members = [
    "crates/slog-core",
    "crates/slog-cli",
    "src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Brother, Brother & Sons"]
license = "MIT"

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Unique identifiers
uuid = { version = "1", features = ["v4", "serde"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
log = "0.4"

# File system
dirs = "5"

# Workspace crates
slog-core = { path = "crates/slog-core" }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
