[package]
name = "sluglog-cli"
description = "CLI tool for SlugLog — log entries from terminal or Claude Code"
version.workspace = true
edition.workspace = true

[[bin]]
name = "slug"
path = "src/main.rs"

[dependencies]
sluglog-core = { workspace = true }
clap = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
